--- a/manifest/package.xml
+++ b/manifest/package.xml
@@ -1,6 +1,10 @@
 <?xml version="1.0" encoding="UTF-8" standalone="yes"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
+        <members>Import_Export_Flows</members>
+        <name>Flow</name>
+    </types>
+    <types>
         <members>CreateFile</members>
         <members>CreateFileTest</members>
         <members>RetrieveFile</members>
